--- a/OpsManage/templates/cmdb/basicData/contractManage.html
+++ b/OpsManage/templates/cmdb/basicData/contractManage.html
@@ -30,97 +30,146 @@
 <div class="box box-group bg-gray-light " style="min-height: 800px;padding-left: 10px;padding-right: 10px">
     <div class="row" style="margin-top: 10px">
 
-        <div class="col-sm-8">
-            <div class="box box-warning">
+                    <div class="col-sm-8">
+                        <div class="box box-warning">
 
-                <div class="box-header with-border">
-                    <h3 class="box-title">
-                        <i class="glyphicon  glyphicon-file"></i>
-                        合同列表
-                    </h3>
-                </div>
+                            <div class="box-header with-border">
+                                <h3 class="box-title">
+                                    <i class="glyphicon glyphicon-shopping-cart"></i>
+                                    供应商列表
+                                </h3>
+                            </div>
 
-                <!-- 合同清单 -->
-                <form method="post" action="contractManage">
-                    <div class="box-body table-responsive ">
-                        <table class="table table-hover">
-                            <tr>
-                                <th>选择</th>
-                                <th>序号</th>
-                                <th>合同编号</th>
-                                <th>合同名称</th>
-                                <th>合同内容</th>
-                                <th>备注</th>
-                            </tr>
+                            <!-- 供应商清单 -->
+                            <form method="post" action="supplierManage">
+                                <div class="box-body table-responsive ">
+                                    <table class="table table-hover">
+                                        <tr>
+                                            <th class="text-center">选择</th>
+                                            <th class="text-center">序号</th>
+                                            <th class="text-center">名称</th>
+                                            <th class="text-center">联系人</th>
+                                            <th class="text-center">电话</th>
+                                            <th class="text-center">备注</th>
+                                            <th class="text-center">编辑</th>
 
-                            {% for i in contract %}
-                            <tr>
-                                <td><input type="checkbox" name="delete_contract" value="{{ i.pk }}"></td>
-                                <td>{{ i.pk }}</td>
-                                <td>{{ i.contract_number }}</td>
-                                <td>{{ i.contract_name }}</td>
-                                <td style="max-width: 250px">{{ i.contract_content }}</td>
-                                <td>{{ i.contract_memo }}</td>
-                            </tr>
-                            {% endfor %}
+                                        </tr>
+                                        {% for i in supplier %}
+                                            <tr>
+                                                <td class="text-center"><input type="checkbox" name="delete_supplier" value="{{ i.pk }}"></td>
+                                                <td class="text-center">{{ i.pk }}</td>
+                                                <td class="text-center">{{ i.supplier_name }}</td>
+                                                <td class="text-center">{{ i.supplier_contacts }}</td>
+                                                <td class="text-center">{{ i.supplier_phone }}</td>
+                                                <td class="text-center">{{ i.supplier_memo }}</td>
+                                                <td class="text-center">
+                                                    <a href="http://127.0.0.1:8000/cmdb/supplierManage?supplierId={{ i.id }}">
+                                                        <i class="glyphicon glyphicon-edit text-info"
+                                                           style="margin-right: 5px"></i>
+                                                    </a>
+                                            </td>
+                                            </tr>
+                                        {% endfor %}
+                                    </table>
+                                </div>
 
-                        </table>
+
+                                <div class="box-footer " >
+                                    <button type="submit" class="btn btn-danger pull-right">Delete</button>
+                                </div>
+                            </form>
+
+                        </div>
+                        <!-- /.box -->
                     </div>
 
+                    <!-- ---添加用户-- -->
+                    <div class="col-sm-4">
+                        <div class="box box-primary">
+                            <!-- box-header -->
+                            <div class="box-header with-border">
+                                <i class="glyphicon glyphicon-plus"></i>
+                                <h3 class="box-title">添加供应商</h3>
+                            </div>
+                            <!-- /.box-header -->
 
-                    <div class="box-footer " >
-                        <button type="submit" class="btn btn-danger pull-right">Delete</button>
+                            <!-- form start -->
+                            <form class="contactl" action="addSupplierSubmitM" method="post" id="form">
+                                <div class="box-body">
+                                    <div class="form-group">
+                                        <label class=" control-label">供应商名称</label>
+                                        <input class="form-control" type="text" name="name" placeholder="supplier name">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="control-label">联系人</label>
+                                        <input class="form-control" type="text" name="contact" placeholder="contact">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class=" control-label">联系电话</label>
+                                        <input class="form-control" type="text" name="phone" placeholder="phone">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class=" control-label">备注</label>
+                                        <input class="form-control" type="text" name="memo" placeholder="memo">
+                                    </div>
+
+                                </div>
+
+                                <!-- box-footer -->
+                                <div class="box-footer">
+                                    <button type="submit" class="btn btn-primary pull-right">Submit</button>
+                                </div>
+                                <!-- /.box-footer -->
+                            </form>
+                            <!-- /.form start -->
+                        </div>
+
+                        <div class="box box-success">
+                            <!-- box-header -->
+                            <div class="box-header with-border">
+                                <i class="glyphicon glyphicon-edit"></i>
+                                <h3 class="box-title">编辑用户</h3>
+                            </div>
+                            <!-- /.box-header -->
+
+                            <!-- form start -->
+                            <form class="contactl" action="editSupplierSubmitM?supplierId={{ SUPPLIER.id }}" method="post">
+                                <div class="box-body">
+                                    <div class="form-group">
+                                        <label class=" control-label">供应商名称</label>
+                                        <input class="form-control" type="text" name="name" value="{{ SUPPLIER.supplier_name}}">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="control-label">联系人</label>
+                                        <input class="form-control" type="text" name="contact" value="{{ SUPPLIER.supplier_contacts }}">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class=" control-label">联系电话</label>
+                                        <input class="form-control" type="text" name="phone" value="{{ SUPPLIER.supplier_phone}}">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class=" control-label">备注</label>
+                                        <input class="form-control" type="text" name="memo" value="{{ SUPPLIER.supplier_memo}}">
+                                    </div>
+                                </div>
+
+                                <!-- box-footer -->
+                                <div class="box-footer">
+                                    <button type="submit" class="btn btn-success pull-right">Submit</button>
+                                </div>
+                                <!-- /.box-footer -->
+                            </form>
+                            <!-- /.form start -->
+                        </div>
+
                     </div>
-                </form>
 
-            </div>
-            <!-- /.box -->
-        </div>
-
-        <!-- ---添加合同-- -->
-        <div class="col-sm-4">
-            <div class="box box-primary">
-                <!-- box-header -->
-                <div class="box-header with-border">
-                    <i class="glyphicon glyphicon-plus"></i>
-                    <h3 class="box-title">添加合同</h3>
-                </div>
-                <!-- /.box-header -->
-
-                <!-- form start -->
-                <form class="contactl" action="addContractSubmit" method="post" id="form">
-                    <div class="box-body">
-                        <div class="form-group">
-                            <label class=" control-label">合同名称</label>
-                            <input class="form-control" type="text" name="name" placeholder="Contract number">
-                        </div>
-
-                        <div class="form-group">
-                            <label class="control-label">合同编号</label>
-                            <input class="form-control" type="text" name="number" placeholder="Contract name">
-                        </div>
-
-                        <div class="form-group">
-                            <label class=" control-label">合同内容</label>
-                            <textarea class="form-control" name="content" rows="12"
-                                          placeholder="Enter ..."></textarea>
-                        </div>
-
-                        <div class="form-group">
-                            <label class=" control-label">备注</label>
-                            <input class="form-control" type="text" name="memo" placeholder="Memo">
-                        </div>
-                    </div>
-
-                    <!-- box-footer -->
-                    <div class="box-footer">
-                        <button type="submit" class="btn btn-primary pull-right">Submit</button>
-                    </div>
-                    <!-- /.box-footer -->
-                </form>
-                <!-- /.form start -->
-            </div>
-        </div>
 
     </div>
 </div>
@@ -132,7 +181,7 @@
 <!-- ----tab效果---- -->
 <script>
     $(document).ready(function () {
-        $("#contract").attr("id", "current"); // Activate first tab
+        $("#supplier").attr("id", "current"); // Activate first tab
     });
 </script>
 {% endblock foot_js %}
